bin_SCRIPTS=bin/importserver.py bin/importcli.py

conf_DATA=etc/importserver.conf.template etc/importcli.conf.template etc/configuration.xml.template
confdir=${prefix}/etc

mrsstable_lib_5u_DATA=lib_5u/liblzo2.so lib_5u/libsnappy.so lib_5u/liblzo_1.0.so lib_5u/libmrsstable.so lib_5u/libnone.so lib_5u/libsnappy_1.0.so
mrsstable_lib_5udir=${prefix}/mrsstable_lib_5u

mrsstable_lib_6u_DATA=lib_6u/liblzo2.so lib_6u/libsnappy.so
mrsstable_lib_6udir=${prefix}/mrsstable_lib_6u

EXTRA_DIST = \
				bin/importserver.py \
				bin/importcli.py \
				etc/importserver.conf.template \
				etc/importcli.conf.template \
				etc/configuration.xml.template \
				lib_5u/liblzo2.so \
				lib_5u/libsnappy.so \
				lib_5u/liblzo_1.0.so \
				lib_5u/libmrsstable.so \
				lib_5u/libnone.so \
				lib_5u/libsnappy_1.0.so \
				lib_6u/liblzo2.so \
				lib_6u/libsnappy.so



