EXTRA_DIST = \
						 pom.xml \
						 src/main/java/com/taobao/mrsstable/MrsstableRunner.java \
						 src/main/java/com/taobao/mrsstable/TextInputSampler.java \
						 src/main/java/com/taobao/mrsstable/MRGenSstable.java  \
						 src/main/java/com/taobao/mrsstable/SSTableBuilder.java \
						 src/main/java/com/taobao/mrsstable/MRLogger.java  \
						 src/main/java/com/taobao/mrsstable/SSTableOutputformat.java
